<resources>
    <string name="app_name">Acute</string>
    <string name="app_info">Info</string>
    <string name="log_out">Logout</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">2076106265945795</string>
    <string name="fb_login_protocol_scheme">fb2076106265945795</string>
    <string name="select_image">Select Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="emp_name_as_on_card">Name</string>
    <string name="save">Save</string>
    <string name="search_reviews">Search Reviews</string>
    <string name="add_comment">Fill in work history or any additional comments about the employee here</string>
    <string name="submit">Submit</string>
    <string name="name">*Name</string>
    <string name="view_results">View Results</string>
    <string name="location">location</string>
    <string name="id_card_type">ID Card Type</string>
    <string name="city">*City</string>
    <string name="age">*Date of birth</string>
    <string name="search">Search</string>
    <string name="results">Results</string>
    <string name="age_hint">20</string>
    <string name="name_hint">Rahul Kumar</string>
    <string name="select_employer">Select Employer</string>
    <string name="reviews">Reviews</string>
    <string name="ratings">Ratings</string>
    <string name="set">Set</string>
    <string name="valid_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 \</string>
    <string name="card_number">&#160;Card Number</string>
    <string name="complete_address">Complete Address</string>
    <string name="mobile_number">*Mobile Number</string>
    <string name="exit">exit</string>
    <string name="address_1">*Address 1&#160;&#160;&#160;[House No./Society]</string>
    <string name="address_2">&#160;Address 2&#160;&#160;&#160;[Street/Landmark]</string>
    <string name="address_3">&#160;Address 3&#160;&#160;&#160;[Area]</string>
    <string name="pin_code">*Pin Code</string>
    <string name="name_search">Name</string>
    <string name="city_search">City</string>
    <string name="date_of_birth_search">Date of birth</string>
    <string-array name="job_array">
        <item>Full Time Servant</item>
        <item>Part Time Servant</item>
        <item>Driver</item>
        <item>Office Staff/Peon</item>
        <item>Others</item>
    </string-array>
    <string-array name="card_array">
        <item>Pan Card</item>
        <item>Aadhar Card</item>
        <item>Voter ID Card</item>
        <item>Driving License</item>
        <item>Passport</item>
    </string-array>

    <string-array name="city_array">
        <item> Agra </item>
        <item> Ahmedabad </item>
        <item> Amritsar </item>
        <item> Banglore (Bengaluru) </item>
        <item> Bhopal </item>
        <item> Chennai </item>
        <item> Coimbatore </item>
        <item> Delhi </item>
        <item> Ghaziabad </item>
        <item> Hyderabad </item>
        <item> Indore </item>
        <item> Jaipur </item>
        <item> Kanpur </item>
        <item> Kochi </item>
        <item> Kolkata </item>
        <item> Lucknow </item>
        <item> Mumbai </item>
        <item> New Delhi </item>
        <item> Nagpur </item>
        <item> Patna </item>
        <item> Pune </item>
        <item> Surat </item>
        <item> Thiruvananthapuram </item>
        <item> Vadodara </item>
        <item> Gandhinagar </item>
        <item> Visakhapatnam </item>
    </string-array>
</resources>
