<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog">

    <TextView
        android:id="@+id/textViewImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        android:text="@string/select_image"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:contentDescription="@string/camera"
                android:id="@+id/imageButtonCamera"
                android:background="@android:color/white"
                android:tint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_photo_camera_black_24dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:tint="@color/pink"
                app:srcCompat="@drawable/baseline_insert_photo_black_24dp"
                android:contentDescription="@string/gallery"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</LinearLayout>